Fix unreadable input field with latest Messenger update
The latest update to Messenger.com's styling made the input field
unreadable as it now has an explicitly set 95% white color as
background.

--- a/fb-messenger-dark.css
+++ b/fb-messenger-dark.css
@@ -101,6 +101,7 @@ input::-webkit-input-placeholder {
 /* input bar */
 ._4rv3 {
 	border-top-color: rgba(255, 255, 255, .1) !important;
+	background-color: #1e1e1e;
 }
 /* make static stickers slightly more readable */
 /*
